--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     <p>Durante a Festa Junina, as mesas ficam cheias de pratos gostosos. Um dos mais famosos é a pamonha, que é feita de milho e pode ser doce ou salgada. A canjica, que é um doce cremoso de milho com leite, também não pode faltar. Outro prato muito querido é o milho cozido, que é simples, mas sempre faz sucesso.
                     </p>
                     <p>Tem também o bolo de milho, que é macio e saboroso. E quem não ama um quentão? Essa bebida quente, feita com gengibre e cachaça, aquece as noites frias de junho. As comidas típicas trazem um sabor especial para a festa e fazem todo mundo se sentir em casa, reunindo amigos e familiares em torno da mesa.</p>
-                    <img src="comidas.png" class="img-fluid w-100"
-                        alt="">
+                    <img src="imagens comidas.png" class="img-fluid w-100"
+                        alt="comidas">
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
                     <p>Uma das tradições mais conhecidas é a dança da quadrilha, onde as pessoas se vestem de caipira e dançam em pares, seguindo a música e as coreografias. Outra prática é acender a fogueira, que simboliza a proteção e a união das pessoas.</p>
                     <p>As brincadeiras também fazem parte da festa, como as competições de puxar corda e o jogo de argolas. Além disso, fazer um "arraiá" com decoração de bandeirinhas coloridas deixa tudo mais alegre.</p>
                     <p>As pessoas costumam se reunir em torno da mesa para comer as delícias típicas e contar histórias. Essas tradições tornam a Festa Junina uma celebração cheia de amor, risadas e boas memórias.</p>
-                    <img src="tradição.png" alt="" class="img-fluid w-100">
+                    <img src="imagem tradiçoes.png" alt="tradição" class="img-fluid w-100"> 
                 </div>
             </div>
         </div>
